tests/models/struct/unnamed/i8/fail/alias.rs
use dade::model;
#[model]
struct TestModel (
   #[field(alias = "val")]
    i8
);
fn main() {}
